--- a/MediaPlayer/src/MediaPlayer.mxml
+++ b/MediaPlayer/src/MediaPlayer.mxml
@@ -132,6 +132,7 @@
 					sndChannel.stop();
 					
 					sndChannel=soundClip.play(loca);
+					sndChannel.soundTransform = new SoundTransform (snd);
 				}
 			}
 			
@@ -374,7 +375,7 @@
 		</s:layout>
 		<s:HGroup width="671" paddingBottom="10" verticalAlign="middle">
 			<s:Image id="bprevious" width="48" height="48" smooth="true" source="assets/previous.png" click="PlayPreviousSong()"/>
-			<s:Image id="bplaypause" width="60" height="60" smooth="true" source="assets/pause.png" click="PlayCurrentSong()"/>
+			<s:Image id="bplaypause" width="60" height="60" smooth="true" source="assets/play.png" click="PlayCurrentSong()"/>
 			<s:Image id="bnext" width="48" height="48" smooth="true" source="assets/next.png" click="PlayNextSong()"/>
 			<s:BorderContainer>
 				<s:VGroup x="0" y="0" horizontalAlign="center" paddingBottom="8" paddingLeft="5"
@@ -390,7 +391,7 @@
 				<s:Label fontSize="14" text="Volume" id="vol"/>
 				<s:Rect width="10"/>
 				<mx:HSlider id="bvolume" width="159" change="bvolume_changeHandler(event)"
-							labels="0,100" maximum="100" minimum="0" tickInterval="20"/>
+							labels="0,100" value="50"  maximum="100" minimum="0" tickInterval="20"/>
 				<s:Rect width="185"/>
 				<s:Image id="brate1" width="30" height="30" smooth="true" source="assets/full_star.png" click="brate1_clickHandler(event)" />
 				<s:Image id="brate2" width="30" height="30" smooth="true" source="assets/empty_star.png" click="brate2_clickHandler(event)" />
